--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Setup maven
-      run: apt update & apt install maven
+    - name: Setup Maven Action
+      uses: s4u/setup-maven-action@3.9.8
     - name: Test with maven
       run: mvn clean compile test
