--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -14,7 +14,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Setup Maven Action
-      uses: s4u/setup-maven-action@3.9.8
+    - name: Set up JDK 11 for x64
+      uses: actions/setup-java@v4
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        architecture: x64
     - name: Test with maven
       run: mvn clean compile test
